build: config example

--- a/iBox/Resources/Config.plist
+++ b/iBox/Resources/Config.plist
@@ -1,8 +1,12 @@
-//
-//  Config.plist
-//  iBox
-//
-//  Created by Chan on 3/10/24.
-//
-
-import Foundation
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>ClientID</key>
+	<string>42.SETTINGS.API.UID</string>
+	<key>ClientSecret</key>
+	<string>42.SETTINGS.API.SECRET</string>
+	<key>RedirectURI</key>
+	<string>iBox://callback</string>
+</dict>
+</plist>
