--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -20,9 +20,8 @@ jobs:
       TUIST_VERSION: "3.36.2"
       
     steps:
-      - name: Checkout + Mise
+      - name: Checkout
         uses: actions/checkout@v3
-        uses: jdx/mise-action@v2
 
       - name: Set Xcode version
         run: sudo xcode-select -s '/Applications/Xcode_15.2.0.app/Contents/Developer'
@@ -41,7 +40,10 @@ jobs:
       - name: Setting Master Key
         run: | 
           echo "$MASTER_KEY" > Tuist/master.key
-          
+                  
+      - name: Mise
+        uses: jdx/mise-action@v2
+
       - name: Install Tuist
         run: mise install tuist@${{ env.TUIIST_VERSION }}
 
