--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -24,9 +24,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Ruby 2.6
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
+          bundler-cache: true
 
       - name: Set Xcode version
         run: sudo xcode-select -s '/Applications/Xcode_15.2.0.app/Contents/Developer'
