fix: ruby version

--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Set up Ruby 2.6
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version: 2.6.10
           bundler-cache: true
 
       - name: Set Xcode version
