--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -17,6 +17,7 @@ jobs:
     env:
       XCODE_VERSION: "15.2.0"
       SWIFT_VERSION: "5.9.2"
+      RUBY_VERSION: "2.6.10"
       TUIST_VERSION: "3.36.2"
       
     steps:
@@ -26,7 +27,7 @@ jobs:
       - name: Set up Ruby 2.6
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.10
+          ruby-version: RUBY_VERSION
           bundler-cache: true
 
       - name: Set Xcode version
